# 86

./: 8086.cpp  8086.hpp  CMakeLists.txt  README.md  commands.xlsx  error list.txt  links.txt  main.cpp  mem.hex  mem.mem
pract1/: PROG.COM
pract2/: scheme.drawio
